# 04.tanstack_router-auth-roles/apps/backend/src/features/users/users.controller.ts
@@ -1,26 +1,14 @@
+import { HTTPException } from 'hono/http-exception';
 import { validator as zValidator } from 'hono-openapi';
 import { createLoggerFactory } from '../../factories/logger.factories.js';
-import { getUserRoute, getUsersRoute, postUserRoute } from './users.route.js';
-import { UserCreationSchema } from './users.schema.js';
-import { createUser, getUser, getUsers } from './users.service.js';
+import { authMiddleware } from '../../middlewares/auth.middleware.js';
+import { getUserRoute, getUsersRoute, patchUserRoute, postUserRoute } from './users.route.js';
+import { UserCreationSchema, UserUpdateSchema } from './users.schema.js';
+import { createUser, getUser, getUsers, patchUser } from './users.service.js';
 
 const app = createLoggerFactory
   .createApp()
-  .get('/:id', getUserRoute, (c) => {
-    const id = c.req.param('id');
-
-    const user = getUser(id);
-
-    if (!user) {
-      return c.json({ message: 'User not found' }, 404);
-    }
-
-    return c.json(user);
-  })
-  .get('/', getUsersRoute, (c) => {
-    const users = getUsers();
-    return c.json(users);
-  })
+  .use(authMiddleware)
   .post('/', postUserRoute, zValidator('json', UserCreationSchema), async (c) => {
     const { email, password } = await c.req.valid('json');
 
@@ -31,6 +19,34 @@ const app = createLoggerFactory
     logger.info({ user: newUser }, 'Creating new user from controller');
 
     return c.json(newUser, 201);
+  })
+  .use(authMiddleware)
+  .get('/:id', getUserRoute, (c) => {
+    const id = c.req.param('id');
+
+    const user = getUser(id);
+
+    if (!user) {
+      throw new HTTPException(404, { message: 'User not found', res: c.res });
+    }
+
+    return c.json(user);
+  })
+  .get('/', getUsersRoute, (c) => {
+    const users = getUsers();
+    return c.json(users);
+  })
+  .patch('/:id', patchUserRoute, zValidator('json', UserUpdateSchema), async (c) => {
+    const id = c.req.param('id');
+    const { email, password, role } = await c.req.valid('json');
+
+    const updatedUser = await patchUser(id, { email, password, role });
+
+    if (!updatedUser) {
+      throw new HTTPException(404, { message: 'User not found', res: c.res });
+    }
+
+    return c.json(updatedUser);
   });
 
 export default app;
