# 04.tanstack_router-auth-roles/apps/backend/src/features/users/users.schema.ts
@@ -1,5 +1,5 @@
-import { ROLE } from "common";
-import { z } from "zod";
+import { ROLE } from 'common';
+import { z } from 'zod';
 
 export const UserSchema = z.object({
   id: z.string(),
@@ -15,8 +15,12 @@ export const UserWithoutPasswordSchema = UserSchema.omit({
 export const UsersWithoutPasswordSchema = z.array(UserWithoutPasswordSchema);
 
 export const UserCreationSchema = z.object({
-  email: z.email().min(1, { message: "Email is required" }),
-  password: z
-    .string()
-    .min(6, { message: "Password must be at least 6 characters long" }),
+  email: z.email().min(1, { message: 'Email is required' }),
+  password: z.string().min(6, { message: 'Password must be at least 6 characters long' }),
+});
+
+export const UserUpdateSchema = z.object({
+  email: z.email().optional(),
+  password: z.string().min(6, { message: 'Password must be at least 6 characters long' }).optional(),
+  role: z.enum(Object.values(ROLE)).optional(),
 });
