# 04.tanstack_router-auth-roles/packages/common/src/constants/role.ts
@@ -1,7 +1,7 @@
 export const ROLE = {
-  ADMIN: "admin",
-  USER: "user",
-  GUEST: "guest",
+  ADMIN: 'admin',
+  USER: 'user',
 } as const;
 
 export type Role = keyof typeof ROLE;
+export type RoleValue = (typeof ROLE)[Role];
